<?xml version='1.0'?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>button_call</name>
    <version>0.0.0</version>
    <description>Button call in ROS2</description>
    
    <maintainer email="ybingcheng@gmail.com">bingcheng</maintainer>
    <license>TODO</license>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>rmf_msgs</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>