<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>call_button_cpp</name>
  <version>0.0.0</version>
  <description>Call button built on wiringpi</description>
  <maintainer email="ybingcheng@gmail.com">Bing</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rmf_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmf_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

