<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>example_services</name>
  <version>0.0.0</version>
  <description>A example service to send and receive msg</description>
  <maintainer email="ybingcheng@gmail.com">Bing</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>say_hello</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>say_hello</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

